--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title></title>
     </head>
     <body>
-        <div id="psswd-gen">
-            <p></p>
+        <div class="psswd-gen">
+            <p id="text"></p>
         </div>
     <script src="js/main.js" charset="utf-8"></script>
     </body>
