--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div class="psswd-gen">
-            <p id="text"></p>
+            <div class="box">
+                <p id="text"></p>
+            </div>
         </div>
     <script src="js/main.js" charset="utf-8"></script>
     </body>
